--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="about">
               <div class="about--banner">
                 <h2>Forgez-vous<br>un avenir<br>sur internet</h2>
-                <p style="width:45%; color:#ffffffa6;">Je suis un développeur passionné qui crée des sites web uniques et puissants pour vous aider à vous démarquer en ligne. Travaillons ensemble pour façonner votre présence en ligne et offrir une expérience utilisateur exceptionnelle.</p>
+                <p style="width:45%; color:#ffffffa6;">Je suis un développeur passionné qui crée des sites web uniques et puissants pour vous aider à vous démarquer en ligne. <span class="tab-mode">Travaillons ensemble pour façonner votre présence en ligne et offrir une expérience utilisateur exceptionnelle.</span></p>
                 <a href="#0">Contactez moi
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
